--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,11 @@
     "bower_components",
     "demo"
   ],
-  "devDependencies": {
+  "dependencies": {
     "jquery": ">=1.9.0",
-    "bootstrap-sass-official": "~3.2.0",
     "font-awesome": "~4.1.0"
+  },
+  "devDependencies": {
+    "bootstrap-sass-official": "~3.2.0"
   }
 }
