--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,7 @@
   ],
   "dependencies": {
     "jquery": ">=1.9.0",
+    "bootstrap-sass-official": "~3.2.0",
     "font-awesome": "~4.1.0"
-  },
-  "devDependencies": {
-    "bootstrap-sass-official": "~3.2.0"
   }
 }
