--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "grunt-sass": "^0.14.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0"
