--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-sass": "^0.14.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-uglify": "^0.5.0"
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
