copy package information from bower.json to package.json
We have a project that we must only use npm packages and without these fields (name and version, specifically) on package.json, npm/yarn throws an error on install.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "chaordic-bootstrap",
+  "version": "3.2.1",
+  "author": "Guilherme Pacheco <guilherme.pacheco@chaordicsystems.com>",
+  "description": "A modified version of bootstrap to be used in Chaordic projects",
+  "keywords": [
+    "bootstrap",
+    "chaordic"
+  ],
+  "license": "MIT",
+  "private": true,
+  "main": "dist/chaordic-bootstrap.css",
   "engines": {
     "node": ">= 0.10.0"
   },
