--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@chaordic/chaordic-bootstrap",
-  "version": "1.0.0",
+  "version": "v3.2.5-rc.0",
   "engines": {
     "node": ">= 0.10.0"
   },
+  "license": "MIT",
+  "private": false,
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-sass": "^0.14.0",
